Command + . generates Escape with key identifier Period, should be Escape https://bugs.webkit.org/show_bug.cgi?id=199393 <rdar://problem/52498001>

Reviewed by Wenson Hsieh.

Source/WebCore:

Remap the key code for Command + . before we compute the Windows virtual key code.
Otherwise, the Windows virtual key code reveals the pre-mapped key code.

* platform/ios/WebEvent.mm:
(-[WebEvent initWithKeyEventType:timeStamp:characters:charactersIgnoringModifiers:modifiers:isRepeating:withFlags:withInputManagerHint:keyCode:isTabKey:]):

LayoutTests:

Update test result.

* fast/events/ios/key-events-comprehensive/key-events-meta-expected.txt:

Canonical link: https://commits.webkit.org/213484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247232 268f45cc-cd09-0410-ab3c-d52691b4dbfc